--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,5 @@
 {
-  "build": {
-    "env": {
-      "PNPM_FLAGS": "--no-frozen-lockfile"
-    }
-  }
+  "installCommand": "pnpm install --no-frozen-lockfile",
+  "buildCommand": "pnpm run build",
+  "outputDirectory": "dist"
 }
